Fix scroll/overflow of typedoc

--- a/src/components/doc-explorer/TypeDoc.css
+++ b/src/components/doc-explorer/TypeDoc.css
@@ -33,10 +33,12 @@
 .type-doc {
   display: flex;
   flex-direction: column;
-  overflow: hidden;
   flex: 1;
   margin-top: var(--panel-spacing);
   position: relative;
+
+  /* Overwrite min-height: https://drafts.csswg.org/css-flexbox/#min-size-auto */
+  min-height: 0;
 
   & > div {
     position: relative;
